--- a/view/user/cart_step2.html
+++ b/view/user/cart_step2.html
@@ -428,20 +428,20 @@
                   <div class="footer-content">
                     <ul class="list-ship">
                       <li><img data-sizes="auto" class="lazyautosizes lazyloaded"
-                              src="resources/img/img1.png"
-                              data-src="resources/img/img1.png"
+                              src="../../resources/img/img1.png"
+                              data-src="../../resources/img/img1.png"
                               alt="Hình thức vận chuyển 1" sizes="59px"></li>
                       <li><img data-sizes="auto" class="lazyautosizes lazyloaded"
-                              src="resources/img/img2.png"
-                              data-src="resources/img/img2.png"
+                              src="../../resources/img/img2.png"
+                              data-src="../../resources/img/img2.png"
                               alt="Hình thức vận chuyển 2" sizes="59px"></li>
                       <li><img data-sizes="auto" class="lazyautosizes lazyloaded"
-                              src="resources/img/img3.png"
-                              data-src="resources/img/img3.png"
+                              src="../../resources/img/img3.png"
+                              data-src="../../resources/img/img3.png"
                               alt="Hình thức vận chuyển 3" sizes="59px"></li>
                       <li><img data-sizes="auto" class="lazyautosizes lazyloaded"
-                              src="resources/img/img4.png"
-                              data-src="resources/img/img4.png"
+                              src="../../resources/img/img4.png"
+                              data-src="../../resources/img/img4.png"
                               alt="Hình thức vận chuyển 4" sizes="59px"></li>
                     </ul>
                   </div>
@@ -509,6 +509,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-<script src="resources/plugins/jquery/jquery.js" crossorigin="anonymous"></script>
+<script src="../../resources/plugins/jquery/jquery.js" crossorigin="anonymous"></script>
 </body>
 </html>
