--- a/view/user/detail.html
+++ b/view/user/detail.html
@@ -240,7 +240,7 @@
                                     <div class="row">
                                         <div class="col-lg-5 col-12">
                                             <div class="pic-frame">
-                                                <img src="resources\images\20241230205000.png">
+                                                <img src="../../resources\images\20241230205000.png">
                                             </div>
                                         </div>
                                         <div class="col-lg-7 col-12">
@@ -383,7 +383,7 @@
                                     <div class="product-list">
                                         <div class="pro-loop d-flex">
                                             <div class="product-img">
-                                                <img src="resources/images/20241230205000.png">
+                                                <img src="../../resources/images/20241230205000.png">
                                             </div>
                                             <div class="other-product-info">
                                                 <div class="pro-detail">
@@ -405,7 +405,7 @@
                                         </div>
                                         <div class="pro-loop d-flex">
                                             <div class="product-img">
-                                                <img src="resources/images/20241230205000.png">
+                                                <img src="../../resources/images/20241230205000.png">
                                             </div>
                                             <div class="other-product-info">
                                                 <div class="pro-detail">
@@ -427,7 +427,7 @@
                                         </div>
                                         <div class="pro-loop d-flex">
                                             <div class="product-img">
-                                                <img src="resources/images/20241230205000.png">
+                                                <img src="../../resources/images/20241230205000.png">
                                             </div>
                                             <div class="other-product-info">
                                                 <div class="pro-detail">
@@ -449,7 +449,7 @@
                                         </div>
                                         <div class="pro-loop d-flex">
                                             <div class="product-img">
-                                                <img src="resources/images/20241230205000.png">
+                                                <img src="../../resources/images/20241230205000.png">
                                             </div>
                                             <div class="other-product-info">
                                                 <div class="pro-detail">
@@ -471,7 +471,7 @@
                                         </div>
                                         <div class="pro-loop d-flex">
                                             <div class="product-img">
-                                                <img src="resources/images/20241230205000.png">
+                                                <img src="../../resources/images/20241230205000.png">
                                             </div>
                                             <div class="other-product-info">
                                                 <div class="pro-detail">
@@ -493,7 +493,7 @@
                                         </div>
                                         <div class="pro-loop d-flex">
                                             <div class="product-img">
-                                                <img src="resources/images/20241230205000.png">
+                                                <img src="../../resources/images/20241230205000.png">
                                             </div>
                                             <div class="other-product-info">
                                                 <div class="pro-detail">
@@ -622,20 +622,20 @@
                     <div class="footer-content">
                     <ul class="list-ship">
                         <li><img data-sizes="auto" class="lazyautosizes lazyloaded"
-                                src="resources/img/img1.png"
-                                data-src="resources/img/img1.png"
+                                src="../../resources/img/img1.png"
+                                data-src="../../resources/img/img1.png"
                                 alt="Hình thức vận chuyển 1" sizes="59px"></li>
                         <li><img data-sizes="auto" class="lazyautosizes lazyloaded"
-                                src="resources/img/img2.png"
-                                data-src="resources/img/img2.png"
+                                src="../../resources/img/img2.png"
+                                data-src="../../resources/img/img2.png"
                                 alt="Hình thức vận chuyển 2" sizes="59px"></li>
                         <li><img data-sizes="auto" class="lazyautosizes lazyloaded"
-                                src="resources/img/img3.png"
-                                data-src="resources/img/img3.png"
+                                src="../../resources/img/img3.png"
+                                data-src="../../resources/img/img3.png"
                                 alt="Hình thức vận chuyển 3" sizes="59px"></li>
                         <li><img data-sizes="auto" class="lazyautosizes lazyloaded"
-                                src="resources/img/img4.png"
-                                data-src="resources/img/img4.png"
+                                src="../../resources/img/img4.png"
+                                data-src="../../resources/img/img4.png"
                                 alt="Hình thức vận chuyển 4" sizes="59px"></li>
                     </ul>
                     </div>
@@ -703,6 +703,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-<script src="resources/plugins/jquery/jquery.js" crossorigin="anonymous"></script>
+<script src="../../resources/plugins/jquery/jquery.js" crossorigin="anonymous"></script>
 </body>
 </html>
