--- a/view/user/dashboard.html
+++ b/view/user/dashboard.html
@@ -505,34 +505,34 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                          <img src="resources/images/dashboard/image1.png" class="d-block w-100" alt="resources/images/dashboard/image1.png">
+                          <img src="../../resources/images/dashboard/image1.png" class="d-block w-100" alt="resources/images/dashboard/image1.png">
                         </div>
                       <div class="carousel-item">
-                          <img src="resources/images/dashboard/image2.png" class="d-block w-100" alt="resources/images/dashboard/image2.png">
+                          <img src="../../resources/images/dashboard/image2.png" class="d-block w-100" alt="resources/images/dashboard/image2.png">
                       </div>
                       <div class="carousel-item">
-                          <img src="resources/images/dashboard/image3.png" class="d-block w-100" alt="resources/images/dashboard/image3.png">
+                          <img src="../../resources/images/dashboard/image3.png" class="d-block w-100" alt="resources/images/dashboard/image3.png">
                       </div>
                       <div class="carousel-item">
-                          <img src="resources/images/dashboard/image4.png" class="d-block w-100" alt="resources/images/dashboard/image4.png">
+                          <img src="../../resources/images/dashboard/image4.png" class="d-block w-100" alt="resources/images/dashboard/image4.png">
                       </div>
                       <div class="carousel-item">
-                          <img src="resources/images/dashboard/image5.png" class="d-block w-100" alt="resources/images/dashboard/image5.png">
+                          <img src="../../resources/images/dashboard/image5.png" class="d-block w-100" alt="resources/images/dashboard/image5.png">
                       </div>
                       <div class="carousel-item">
-                          <img src="resources/images/dashboard/image6.png" class="d-block w-100" alt="resources/images/dashboard/image6.png">
+                          <img src="../../resources/images/dashboard/image6.png" class="d-block w-100" alt="resources/images/dashboard/image6.png">
                       </div>
                       <div class="carousel-item">
-                          <img src="resources/images/dashboard/image7.png" class="d-block w-100" alt="resources/images/dashboard/image7.png">
+                          <img src="../../resources/images/dashboard/image7.png" class="d-block w-100" alt="resources/images/dashboard/image7.png">
                       </div>
                       <div class="carousel-item">
-                          <img src="resources/images/dashboard/image8.png" class="d-block w-100" alt="resources/images/dashboard/image8.png">
+                          <img src="../../resources/images/dashboard/image8.png" class="d-block w-100" alt="resources/images/dashboard/image8.png">
                       </div>
                       <div class="carousel-item">
-                          <img src="resources/images/dashboard/image9.png" class="d-block w-100" alt="resources/images/dashboard/image9.png">
+                          <img src="../../resources/images/dashboard/image9.png" class="d-block w-100" alt="resources/images/dashboard/image9.png">
                       </div>
                       <div class="carousel-item">
-                          <img src="resources/images/dashboard/image10.png" class="d-block w-100" alt="resources/images/dashboard/image10.png">
+                          <img src="../../resources/images/dashboard/image10.png" class="d-block w-100" alt="resources/images/dashboard/image10.png">
                       </div>
                   </div>
                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselBanner" data-bs-slide="prev">
@@ -566,7 +566,7 @@
                       <div class="body-content">
                           <div class="col-lg-3 col-6 pb-4">
                               <div class="pro-img">
-                                  <img src="resources/images/20241230205000.png">
+                                  <img src="../../resources/images/20241230205000.png">
                               </div>
                               <div class="pro-detail">
                                   <h3 class="pro-name">
@@ -586,7 +586,7 @@
                           </div>
                           <div class="col-lg-3 col-6 pb-4">
                               <div class="pro-img">
-                                  <img src="resources/images/20241230205000.png">
+                                  <img src="../../resources/images/20241230205000.png">
                               </div>
                               <div class="pro-detail">
                                   <h3 class="pro-name">
@@ -606,7 +606,7 @@
                           </div>
                           <div class="col-lg-3 col-6 pb-4">
                               <div class="pro-img">
-                                  <img src="resources/images/20241230205000.png">
+                                  <img src="../../resources/images/20241230205000.png">
                               </div>
                               <div class="pro-detail">
                                   <h3 class="pro-name">
@@ -626,7 +626,7 @@
                           </div>
                           <div class="col-lg-3 col-6 pb-4">
                               <div class="pro-img">
-                                  <img src="resources/images/20241230205000.png">
+                                  <img src="../../resources/images/20241230205000.png">
                               </div>
                               <div class="pro-detail">
                                   <h3 class="pro-name">
@@ -667,7 +667,7 @@
                       <div class="body-content">
                           <div class="col-lg-3 col-6 pb-4">
                               <div class="pro-img">
-                                  <img src="resources/images/20241230205000.png">
+                                  <img src="../../resources/images/20241230205000.png">
                               </div>
                               <div class="pro-detail">
                                   <h3 class="pro-name">
@@ -687,7 +687,7 @@
                           </div>
                           <div class="col-lg-3 col-6 pb-4">
                               <div class="pro-img">
-                                  <img src="resources/images/20241230205000.png">
+                                  <img src="../../resources/images/20241230205000.png">
                               </div>
                               <div class="pro-detail">
                                   <h3 class="pro-name">
@@ -707,7 +707,7 @@
                           </div>
                           <div class="col-lg-3 col-6 pb-4">
                               <div class="pro-img">
-                                  <img src="resources/images/20241230205000.png">
+                                  <img src="../../resources/images/20241230205000.png">
                               </div>
                               <div class="pro-detail">
                                   <h3 class="pro-name">
@@ -727,7 +727,7 @@
                           </div>
                           <div class="col-lg-3 col-6 pb-4">
                               <div class="pro-img">
-                                  <img src="resources/images/20241230205000.png">
+                                  <img src="../../resources/images/20241230205000.png">
                               </div>
                               <div class="pro-detail">
                                   <h3 class="pro-name">
@@ -768,7 +768,7 @@
                       <div class="body-content">
                           <div class="col-lg-3 col-6 pb-4">
                               <div class="pro-img">
-                                  <img src="resources/images/20241230205000.png">
+                                  <img src="../../resources/images/20241230205000.png">
                               </div>
                               <div class="pro-detail">
                                   <h3 class="pro-name">
@@ -788,7 +788,7 @@
                           </div>
                           <div class="col-lg-3 col-6 pb-4">
                               <div class="pro-img">
-                                  <img src="resources/images/20241230205000.png">
+                                  <img src="../../resources/images/20241230205000.png">
                               </div>
                               <div class="pro-detail">
                                   <h3 class="pro-name">
@@ -808,7 +808,7 @@
                           </div>
                           <div class="col-lg-3 col-6 pb-4">
                               <div class="pro-img">
-                                  <img src="resources/images/20241230205000.png">
+                                  <img src="../../resources/images/20241230205000.png">
                               </div>
                               <div class="pro-detail">
                                   <h3 class="pro-name">
@@ -828,7 +828,7 @@
                           </div>
                           <div class="col-lg-3 col-6 pb-4">
                               <div class="pro-img">
-                                  <img src="resources/images/20241230205000.png">
+                                  <img src="../../resources/images/20241230205000.png">
                               </div>
                               <div class="pro-detail">
                                   <h3 class="pro-name">
@@ -869,7 +869,7 @@
                       <div class="body-content">
                           <div class="col-lg-3 col-6 pb-4">
                               <div class="pro-img">
-                                  <img src="resources/images/20241230205000.png">
+                                  <img src="../../resources/images/20241230205000.png">
                               </div>
                               <div class="pro-detail">
                                   <h3 class="pro-name">
@@ -889,7 +889,7 @@
                           </div>
                           <div class="col-lg-3 col-6 pb-4">
                               <div class="pro-img">
-                                  <img src="resources/images/20241230205000.png">
+                                  <img src="../../resources/images/20241230205000.png">
                               </div>
                               <div class="pro-detail">
                                   <h3 class="pro-name">
@@ -909,7 +909,7 @@
                           </div>
                           <div class="col-lg-3 col-6 pb-4">
                               <div class="pro-img">
-                                  <img src="resources/images/20241230205000.png">
+                                  <img src="../../resources/images/20241230205000.png">
                               </div>
                               <div class="pro-detail">
                                   <h3 class="pro-name">
@@ -929,7 +929,7 @@
                           </div>
                           <div class="col-lg-3 col-6 pb-4">
                               <div class="pro-img">
-                                  <img src="resources/images/20241230205000.png">
+                                  <img src="../../resources/images/20241230205000.png">
                               </div>
                               <div class="pro-detail">
                                   <h3 class="pro-name">
@@ -1054,20 +1054,20 @@
                 <div class="footer-content">
                   <ul class="list-ship">
                     <li><img data-sizes="auto" class="lazyautosizes lazyloaded"
-                            src="resources/img/img1.png"
-                            data-src="resources/img/img1.png"
+                            src="../../resources/img/img1.png"
+                            data-src="../../resources/img/img1.png"
                             alt="Hình thức vận chuyển 1" sizes="59px"></li>
                     <li><img data-sizes="auto" class="lazyautosizes lazyloaded"
-                            src="resources/img/img2.png"
-                            data-src="resources/img/img2.png"
+                            src="../../resources/img/img2.png"
+                            data-src="../../resources/img/img2.png"
                             alt="Hình thức vận chuyển 2" sizes="59px"></li>
                     <li><img data-sizes="auto" class="lazyautosizes lazyloaded"
-                            src="resources/img/img3.png"
-                            data-src="resources/img/img3.png"
+                            src="../../resources/img/img3.png"
+                            data-src="../../resources/img/img3.png"
                             alt="Hình thức vận chuyển 3" sizes="59px"></li>
                     <li><img data-sizes="auto" class="lazyautosizes lazyloaded"
-                            src="resources/img/img4.png"
-                            data-src="resources/img/img4.png"
+                            src="../../resources/img/img4.png"
+                            data-src="../../resources/img/img4.png"
                             alt="Hình thức vận chuyển 4" sizes="59px"></li>
                   </ul>
                 </div>
@@ -1135,6 +1135,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
           crossorigin="anonymous"></script>
-  <script src="resources/plugins/jquery/jquery.js" crossorigin="anonymous"></script>
+  <script src="../../resources/plugins/jquery/jquery.js" crossorigin="anonymous"></script>
   </body>
 </html>
