--- a/view/user/detail.html
+++ b/view/user/detail.html
@@ -3,9 +3,9 @@
     <title>Chi tiết sản phẩm</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="resources/plugins/fontawesome/css/all.css">
-    <link rel="stylesheet" href="resources/css/styles.css">
-    <link rel="stylesheet" href="resources/css/main.css">
+    <link rel="stylesheet" href="../../resources/plugins/fontawesome/css/all.css">
+    <link rel="stylesheet" href="../../resources/css/styles.css">
+    <link rel="stylesheet" href="../../resources/css/main.css">
 </head>
 <body>
     <div class="section">
