--- a/view/user/dashboard.html
+++ b/view/user/dashboard.html
@@ -150,26 +150,25 @@
                       <div class="header-action-item main-header--account hide-mb">
                           <div class="header-action_text">
                               <a class="header-action__link" href="#" rel="nofollow" id="site-account-handle" aria-label="Tài khoản" title="Tài khoản">
-                      <span class="box-icon">
-                          <svg viewBox="0 0 24 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                              <path d="M11.9999 11.9091C10.5412 11.9091 9.14224 11.3344 8.11079 10.3115C7.07934 9.28857 6.49988 7.90118 6.49988 6.45455C6.49988 5.00791 7.07934 3.62052 8.11079 2.5976C9.14224 1.57467 10.5412 1 11.9999 1C13.4586 1 14.8575 1.57467 15.889 2.5976C16.9204 3.62052 17.4999 5.00791 17.4999 6.45455C17.4999 7.90118 16.9204 9.28857 15.889 10.3115C14.8575 11.3344 13.4586 11.9091 11.9999 11.9091Z"
-                                    stroke="white" stroke-width="2" stroke-linecap="round"></path>
-                              <path d="M0.999878 25.0001V23.5975C0.999878 20.7923 4.49988 15.1819 11.9999 15.1819C19.4999 15.1819 22.9999 20.7923 22.9999 23.5975V25.0001"
-                                    stroke="white" stroke-width="2" stroke-linecap="round"></path>
-                          </svg>
-                          <span class="box-icon--close">
-                              <svg viewBox="0 0 19 19" role="presentation">
-                                  <path d="M9.1923882 8.39339828l7.7781745-7.7781746 1.4142136 1.41421357-7.7781746 7.77817459 7.7781746 7.77817456L16.9705627 19l-7.7781745-7.7781746L1.41421356 19 0 17.5857864l7.7781746-7.77817456L0 2.02943725 1.41421356.61522369 9.1923882 8.39339828z"
-                                        fill-rule="evenodd"></path>
-                              </svg>
-                          </span>
-                      </span>
-                                  <span class="box-text">
-                          <span class="txtnw">Đăng</span>
-                          <span class="txtbl">nhập</span>
-                      </span>
+                                <span class="box-icon">
+                                    <svg viewBox="0 0 24 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M11.9999 11.9091C10.5412 11.9091 9.14224 11.3344 8.11079 10.3115C7.07934 9.28857 6.49988 7.90118 6.49988 6.45455C6.49988 5.00791 7.07934 3.62052 8.11079 2.5976C9.14224 1.57467 10.5412 1 11.9999 1C13.4586 1 14.8575 1.57467 15.889 2.5976C16.9204 3.62052 17.4999 5.00791 17.4999 6.45455C17.4999 7.90118 16.9204 9.28857 15.889 10.3115C14.8575 11.3344 13.4586 11.9091 11.9999 11.9091Z"
+                                              stroke="white" stroke-width="2" stroke-linecap="round"></path>
+                                        <path d="M0.999878 25.0001V23.5975C0.999878 20.7923 4.49988 15.1819 11.9999 15.1819C19.4999 15.1819 22.9999 20.7923 22.9999 23.5975V25.0001"
+                                              stroke="white" stroke-width="2" stroke-linecap="round"></path>
+                                    </svg>
+                                    <span class="box-icon--close">
+                                        <svg viewBox="0 0 19 19" role="presentation">
+                                            <path d="M9.1923882 8.39339828l7.7781745-7.7781746 1.4142136 1.41421357-7.7781746 7.77817459 7.7781746 7.77817456L16.9705627 19l-7.7781745-7.7781746L1.41421356 19 0 17.5857864l7.7781746-7.77817456L0 2.02943725 1.41421356.61522369 9.1923882 8.39339828z"
+                                                  fill-rule="evenodd"></path>
+                                        </svg>
+                                    </span>
+                                </span>
+                                <span class="box-text">
+                                    <span class="txtnw">Đăng</span>
+                                    <span class="txtbl">nhập</span>
+                                </span>
                               </a>
-  
                               <span class="box-triangle">
                         <svg viewBox="0 0 20 9" role="presentation">
                             <path d="M.47108938 9c.2694725-.26871321.57077721-.56867841.90388257-.89986354C3.12384116 6.36134886 5.74788116 3.76338565 9.2467995.30653888c.4145057-.4095171 1.0844277-.40860098 1.4977971.00205122L19.4935156 9H.47108938z"
@@ -199,12 +198,12 @@
                                               </svg>
                                           </div>
                                           <div class="d-flex flex-column">
-                                              <div class="thing-name">Xin chào, hoàng null</div>
+                                              <div class="thing-name">Xin chào, vui lòng đăng nhập</div>
                                           </div>
                                       </div>
                                       <div class="actions">
-                                          <button class="js-account" data-box="acc-login-box">ĐĂNG NHẬP</button>
-                                          <button class="js-account" data-box="acc-register-box">ĐĂNG KÝ</button>
+                                          <button class="js-account" type="button" data-bs-toggle="modal" data-bs-target="#modalLogin" data-box="acc-login-box">ĐĂNG NHẬP</button>
+                                          <button class="js-account" type="button" data-bs-toggle="modal" data-bs-target="#modalRegister" data-box="acc-register-box">ĐĂNG KÝ</button>
                                       </div>
                                   </div>
                               </div>
@@ -1131,6 +1130,79 @@
         </div>
       </div>
     </footer>
+    <div class="modal fade" id="modalLogin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="ModalLogin">Đăng nhập</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form id="form-info-order" class="" action="" method="post">
+              <div class="row form-group align-items-center mb-2">
+                <label class="col-11 col-form-label" for="email">Email</label>
+                <div class="col-12">
+                  <input type="text" class="form-control form-control-sm" placeholder="Nhập email" id="email" name="email"
+                    value="" />
+                </div>
+              </div>
+              <div class="row form-group align-items-center mb-2">
+                <label class="col-11 col-form-label" for="password">Mật khẩu</label>
+                <div class="col-12">
+                  <input type="text" class="form-control form-control-sm" placeholder="Nhập mật khẩu" id="password" name="password"
+                    value="" />
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <div class="col-12">
+              <button type="button" class="btn btn-danger w-100">TẠO TÀI KHOẢN</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="modalRegister" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="ModalLogin">ĐĂNG KÝ TÀI KHOẢN</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form id="form-info-order" class="" action="" method="post">
+              <div class="row form-group align-items-center mb-2">
+                <label class="col-11 col-form-label" for="name">Họ tên</label>
+                <div class="col-12">
+                  <input type="text" class="form-control form-control-sm" placeholder="Nhập họ tên" id="name" name="name"
+                    value="" />
+                </div>
+              </div>
+              <div class="row form-group align-items-center mb-2">
+                <label class="col-11 col-form-label" for="email">Email</label>
+                <div class="col-12">
+                  <input type="text" class="form-control form-control-sm" placeholder="Nhập email" id="email" name="email"
+                    value="" />
+                </div>
+              </div>
+              <div class="row form-group align-items-center mb-2">
+                <label class="col-11 col-form-label" for="password">Mật khẩu</label>
+                <div class="col-12">
+                  <input type="text" class="form-control form-control-sm" placeholder="Nhập mật khẩu" id="password" name="password"
+                    value="" />
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <div class="col-12">
+              <button type="button" class="btn btn-danger w-100">TẠO TÀI KHOẢN</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
