--- a/view/user/detail.html
+++ b/view/user/detail.html
@@ -199,12 +199,12 @@
                                                     </svg>
                                                 </div>
                                                 <div class="d-flex flex-column">
-                                                    <div class="thing-name">Xin chào, hoàng null</div>
+                                                    <div class="thing-name">Xin chào, vui lòng đăng nhập</div>
                                                 </div>
                                             </div>
                                             <div class="actions">
-                                                <button class="js-account" data-box="acc-login-box">ĐĂNG NHẬP</button>
-                                                <button class="js-account" data-box="acc-register-box">ĐĂNG KÝ</button>
+                                                <button class="js-account" type="button" data-bs-toggle="modal" data-bs-target="#modalLogin" data-box="acc-login-box">ĐĂNG NHẬP</button>
+                                                <button class="js-account" type="button" data-bs-toggle="modal" data-bs-target="#modalRegister" data-box="acc-register-box">ĐĂNG KÝ</button>
                                             </div>
                                         </div>
                                     </div>
@@ -699,6 +699,79 @@
             </div>
         </div>
         </footer>
+        <div class="modal fade" id="modalLogin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="ModalLogin">Đăng nhập</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <form id="form-info-order" class="" action="" method="post">
+                    <div class="row form-group align-items-center mb-2">
+                      <label class="col-11 col-form-label" for="email">Email</label>
+                      <div class="col-12">
+                        <input type="text" class="form-control form-control-sm" placeholder="Nhập email" id="email" name="email"
+                          value="" />
+                      </div>
+                    </div>
+                    <div class="row form-group align-items-center mb-2">
+                      <label class="col-11 col-form-label" for="password">Mật khẩu</label>
+                      <div class="col-12">
+                        <input type="text" class="form-control form-control-sm" placeholder="Nhập mật khẩu" id="password" name="password"
+                          value="" />
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <div class="col-12">
+                    <button type="button" class="btn btn-danger w-100">TẠO TÀI KHOẢN</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal fade" id="modalRegister" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="ModalLogin">ĐĂNG KÝ TÀI KHOẢN</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <form id="form-info-order" class="" action="" method="post">
+                    <div class="row form-group align-items-center mb-2">
+                      <label class="col-11 col-form-label" for="name">Họ tên</label>
+                      <div class="col-12">
+                        <input type="text" class="form-control form-control-sm" placeholder="Nhập họ tên" id="name" name="name"
+                          value="" />
+                      </div>
+                    </div>
+                    <div class="row form-group align-items-center mb-2">
+                      <label class="col-11 col-form-label" for="email">Email</label>
+                      <div class="col-12">
+                        <input type="text" class="form-control form-control-sm" placeholder="Nhập email" id="email" name="email"
+                          value="" />
+                      </div>
+                    </div>
+                    <div class="row form-group align-items-center mb-2">
+                      <label class="col-11 col-form-label" for="password">Mật khẩu</label>
+                      <div class="col-12">
+                        <input type="text" class="form-control form-control-sm" placeholder="Nhập mật khẩu" id="password" name="password"
+                          value="" />
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <div class="col-12">
+                    <button type="button" class="btn btn-danger w-100">TẠO TÀI KHOẢN</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
