--- a/view/admin/account/account.html
+++ b/view/admin/account/account.html
@@ -9,7 +9,7 @@
     <meta name="description" content="GEAR.VN" />
     <meta name="author" content="GEAR.VN" />
     <title>Dashboard ACCOUNT</title>
-    <link href="/resources/admin/css/styles.css" rel="stylesheet" />
+    <link href="/resources/css/admin/styles.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
 
@@ -493,13 +493,13 @@ aria-describedby="btnNavbarSearch" />
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybF6kV5O6Nf1XbFjwRz2Kl68uGxAtGvX7SeCmbkNQvd53u1T2" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="/resources/admin/js/scripts.js"></script>
+<script src="/resources/js/scripts.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
         crossorigin="anonymous"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
         crossorigin="anonymous"></script>
-<script src="/resources/admin/js/datatables-simple-demo.js"></script>
+<script src="/resources/js/datatables-simple-demo.js"></script>
 <script>
 
     document.getElementById('createUserForm').addEventListener('submit', function(event) {
