--- a/view/admin/account/account.html
+++ b/view/admin/account/account.html
@@ -9,7 +9,7 @@
     <meta name="description" content="GEAR.VN" />
     <meta name="author" content="GEAR.VN" />
     <title>Dashboard ACCOUNT</title>
-    <link href="/resources/css/admin/styles.css" rel="stylesheet" />
+    <link href="D:\java\case_study_frontend\resources\css\admin\styles.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
 
@@ -90,7 +90,7 @@ aria-describedby="btnNavbarSearch" />
                     <li class="breadcrumb-item active">ACCOUNT</li>
                 </ol>
 
-            <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">Tạo mới Account</button>
+            <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modal-create">Tạo mới Account</button>
             <hr/>
 
                 <div class="card mb-4">
@@ -116,10 +116,13 @@ aria-describedby="btnNavbarSearch" />
                                 <td>Edinburgh</td>
                                 <td>61</td>
                                 <td>
-                                    <button type="button" class="btn btn-secondary">Sửa</button>
-                                    <button type="button" class="btn btn-secondary">Xóa</button>
-                                    <button type="button" class="btn btn-secondary">Update</button>
-                                    <button type="button" class="btn btn-secondary">Chi tiết</button>
+                                    <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modal-update">Sửa</button>
+                                    <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                                       Xóa
+                                    </button>
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                      Chi tiết
+                                    </button>
 
                                 </td>
 
@@ -132,7 +135,6 @@ aria-describedby="btnNavbarSearch" />
                                 <td>
                                         <button type="button" class="btn btn-secondary">Sửa</button>
                                         <button type="button" class="btn btn-secondary">Xóa</button>
-                                        <button type="button" class="btn btn-secondary">Update</button>
                                          <button type="button" class="btn btn-secondary">Chi tiết</button>
                                 </td>
 
@@ -145,7 +147,6 @@ aria-describedby="btnNavbarSearch" />
                                 <td>
                                     <button type="button" class="btn btn-secondary">Sửa</button>
                                     <button type="button" class="btn btn-secondary">Xóa</button>
-                                    <button type="button" class="btn btn-secondary">Update</button>
                                     <button type="button" class="btn btn-secondary">Chi tiết</button>
 
 
@@ -421,9 +422,8 @@ aria-describedby="btnNavbarSearch" />
                 </div>
             </div>
 
-            <!-- Modal -->
-        
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <!-- Modal create -->
+            <div class="modal fade" id="modal-create" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                 <div class="modal-header">
@@ -469,6 +469,69 @@ aria-describedby="btnNavbarSearch" />
                 </div>
             </div>
             </div>
+            <!-- Modal update-->
+
+            <div class="modal fade" id="modal-update" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Cập nhật thông tin:</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input disabled type="email" class="form-control" id="email" name="email" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Mật khẩu cũ</label>
+                            <input type="password" class="form-control" id="password-old" name="password" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Mật khẩu mới</label>
+                            <input type="password" class="form-control" id="password-new" name="password" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Xác nhận mật khẩu</label>
+                            <input type="password" class="form-control" id="password-new" name="password" required>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+                    <button type="button" class="btn btn-primary">Tạo mới</button>
+                </div>
+                </div>
+            </div>
+            </div>
+
+            <!--Modal delete-->
+            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h1 class="modal-title fs-5" id="staticBackdropLabel">Xóa account</h1>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Bạn có chắc muốn account này không?</p>
+                        <small style="color: red; font-style: italic">Lưu ý hành động này không thể hoàn
+                            tác!</small>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+                      <button type="button" class="btn btn-primary">Xác nhận</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            <!--Modal view details-->
+            <!-- Scrollable modal -->
+            <div class="modal-dialog modal-dialog-scrollable">
+ 
+                 </div>
+
         </main>
         <!-- <jsp:include page="../layout/footer.jsp" /> -->
          
@@ -484,26 +547,14 @@ aria-describedby="btnNavbarSearch" />
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybF6kV5O6Nf1XbFjwRz2Kl68uGxAtGvX7SeCmbkNQvd53u1T2" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="/resources/js/scripts.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
-        crossorigin="anonymous"></script>
+crossorigin="anonymous"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
-        crossorigin="anonymous"></script>
-<script src="/resources/js/datatables-simple-demo.js"></script>
-<script>
+crossorigin="anonymous"></script>
+<script src="D:\java\case_study_frontend\resources\js\scripts.js"></script>
+<script src="D:\java\case_study_frontend\resources\js\datatables-simple-demo.js"></script>
 
-    document.getElementById('createUserForm').addEventListener('submit', function(event) {
-        event.preventDefault(); 
-        var successToast = new bootstrap.Toast(document.getElementById('successToast'));
-        successToast.show();
-        var modal = bootstrap.Modal.getInstance(document.getElementById('createUserModal'));
-        modal.hide();
-    });
-    setTimeout(function () {
-        document.getElementById("successToast").remove();
-    },3000)
-</script>
 </body>
 
 </html>
