--- a/view/admin/product/product.html
+++ b/view/admin/product/product.html
@@ -9,7 +9,8 @@
   <meta name="description" content="GEAR.VN" />
   <meta name="author" content="GEAR.VN" />
   <title>Dashboard PRODUCT</title>
-  <link href="D:\java\case_study_frontend\resources\css\admin\styles.css" rel="stylesheet" />
+  <link href="../../../resources/css/admin/styles.css" rel="stylesheet" />
+
   <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
 
@@ -597,8 +598,8 @@ aria-describedby="btnNavbarSearch" />
 
 <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
         crossorigin="anonymous"></script>
-        <script src="D:\java\case_study_frontend\resources\js\scripts.js"></script>
-        <script src="D:\java\case_study_frontend\resources\js\datatables-simple-demo.js"></script>
+        <script src="../../../resources/js/scripts.js"></script>
+        <script src="../../../resources/js/datatables-simple-demo.js"></script>
 </body>
 
 </html>
