--- a/view/admin/account/account.html
+++ b/view/admin/account/account.html
@@ -9,7 +9,7 @@
     <meta name="description" content="GEAR.VN" />
     <meta name="author" content="GEAR.VN" />
     <title>Dashboard ACCOUNT</title>
-    <link href="D:\java\case_study_frontend\resources\css\admin\styles.css" rel="stylesheet" />
+    <link href="../../../resources/css/admin/styles.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
 
@@ -552,8 +552,8 @@ crossorigin="anonymous"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
 crossorigin="anonymous"></script>
-<script src="D:\java\case_study_frontend\resources\js\scripts.js"></script>
-<script src="D:\java\case_study_frontend\resources\js\datatables-simple-demo.js"></script>
+<script src="../../../resources/js/scripts.js"></script>
+<script src="../../../resources/js/datatables-simple-demo.js"></script>
 
 </body>
 
