--- a/view/admin/dashboard/dashboard.html
+++ b/view/admin/dashboard/dashboard.html
@@ -10,7 +10,8 @@
   <meta name="author" content="GEAR.VN" />
   <title>Dashboard ADMIN</title>
   <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
-  <link href="D:\java\case_study_frontend\resources\css\admin\styles.css" rel="stylesheet" />
+  <link href="../../../resources/css/admin/styles.css" rel="stylesheet" />
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
@@ -143,8 +144,8 @@ aria-describedby="btnNavbarSearch" />
 
 <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
         crossorigin="anonymous"></script>
-        <script src="D:\java\case_study_frontend\resources\js\scripts.js"></script>
-        <script src="D:\java\case_study_frontend\resources\js\datatables-simple-demo.js"></script>
+        <script src="../../../resources/js/scripts.js"></script>
+        <script src="../../../resources/js/datatables-simple-demo.js"></script>
 </body>
 
 </html>
