--- a/view/admin/product/product.html
+++ b/view/admin/product/product.html
@@ -45,7 +45,7 @@ aria-describedby="btnNavbarSearch" />
               <li>
                   <hr class="dropdown-divider" />
               </li>
-              <li><a class="dropdown-item" href="?action=login">Logout</a></li>
+              <li><a class="dropdown-item" href="../login/login.html">Logout</a></li>
           </ul>
       </li>
   </ul>
