--- a/view/admin/account/account.html
+++ b/view/admin/account/account.html
@@ -61,7 +61,10 @@ aria-describedby="btnNavbarSearch" />
             <div class="sb-nav-link-icon"><i class="fa-solid fa-house-laptop"></i></div>
             TRANG CHỦ
           </a>
-  
+          <a class="nav-link" href="../account/myaccount.html">
+            <div class="sb-nav-link-icon"><i class="fa-solid fa-gears"></i></div>
+            MY ACCOUNT
+          </a>
           <a class="nav-link" href="../account/account.html">
             <div class="sb-nav-link-icon"><i class="fa-solid fa-user"></i></div>
             QUẢN LÝ ACCOUNT
@@ -224,7 +227,6 @@ aria-describedby="btnNavbarSearch" />
             </div>
             </div>
             <!-- Modal update-->
-
             <div class="modal fade" id="modal-update" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -240,15 +242,15 @@ aria-describedby="btnNavbarSearch" />
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Mật khẩu cũ</label>
-                            <input type="password" class="form-control" id="password-old" name="password" required>
+                            <input disabled type="password" class="form-control" id="password-old" name="password" required>
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Mật khẩu mới</label>
-                            <input type="password" class="form-control" id="password-new" name="password" required>
+                            <input disabled type="password" class="form-control" id="password-new" name="password" required>
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Xác nhận mật khẩu</label>
-                            <input type="password" class="form-control" id="password-new" name="password" required>
+                            <input disabled type="password" class="form-control" id="password-new" name="password" required>
                         </div>
                     </form>
                 </div>
@@ -279,8 +281,8 @@ aria-describedby="btnNavbarSearch" />
                   </div>
                 </div>
               </div>
+
             <!--Modal view details-->
-            <!-- Scrollable modal -->
             <div class="modal fade" id="modal-detail" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                   <div class="modal-content">
@@ -307,7 +309,7 @@ aria-describedby="btnNavbarSearch" />
         </main>
         <!-- <jsp:include page="../layout/footer.jsp" /> -->
          
-<footer class="py-4 bg-light mt-auto">
+    <footer class="py-4 bg-light mt-auto">
     <div class="container-fluid px-4">
       <div class="d-flex align-items-center justify-content-between small">
         <div class="text-muted">Copyright &copy; CODEGYM.VN</div>
