--- a/view/admin/layout/sidebar.html
+++ b/view/admin/layout/sidebar.html
@@ -9,6 +9,11 @@
           TRANG CHỦ
         </a>
 
+        <a class="nav-link" href="../account/account.html">
+          <div class="sb-nav-link-icon"><i class="fa-solid fa-user"></i></div>
+          MY ACCOUNT
+        </a>
+        
         <a class="nav-link" href="?action=account">
           <div class="sb-nav-link-icon"><i class="fa-solid fa-user"></i></div>
           QUẢN LÝ ACCOUNT
