--- a/view/admin/product/product.html
+++ b/view/admin/product/product.html
@@ -63,6 +63,11 @@ aria-describedby="btnNavbarSearch" />
           TRANG CHỦ
         </a>
 
+        <a class="nav-link" href="../account/myaccount.html">
+          <div class="sb-nav-link-icon"><i class="fa-solid fa-gears"></i></div>
+          MY ACCOUNT
+        </a>
+
         <a class="nav-link" href="../account/account.html">
           <div class="sb-nav-link-icon"><i class="fa-solid fa-user"></i></div>
           QUẢN LÝ ACCOUNT
