--- a/view/admin/dashboard/dashboard.html
+++ b/view/admin/dashboard/dashboard.html
@@ -10,7 +10,7 @@
   <meta name="author" content="GEAR.VN" />
   <title>Dashboard ADMIN</title>
   <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
-  <link href="../../../resources/css/admin/styles.css" rel="stylesheet" />
+      <link href="../../../resources/css/admin/styles.css" rel="stylesheet" />
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -47,7 +47,7 @@ aria-describedby="btnNavbarSearch" />
               <li>
                   <hr class="dropdown-divider" />
               </li>
-              <li><a class="dropdown-item" href="../login/login.html">Logout</a></li>
+              <li><a class="dropdown-item" href="?action=login">Logout</a></li>
           </ul>
       </li>
   </ul>
@@ -64,6 +64,10 @@ aria-describedby="btnNavbarSearch" />
           <div class="sb-nav-link-icon"><i class="fa-solid fa-house-laptop"></i></div>
           TRANG CHỦ
         </a>
+        <a class="nav-link" href="../account/myaccount.html">
+          <div class="sb-nav-link-icon"><i class="fa-solid fa-gears"></i></div>
+          MY ACCOUNT
+        </a>
 
         <a class="nav-link" href="../account/account.html">
           <div class="sb-nav-link-icon"><i class="fa-solid fa-user"></i></div>
@@ -79,6 +83,7 @@ aria-describedby="btnNavbarSearch" />
           <div class="sb-nav-link-icon"><i class="fa-solid fa-list"></i></div>
           QUẢN LÝ PRODUCT
         </a>
+
       </div>
     </div>
   </nav>
@@ -90,7 +95,7 @@ aria-describedby="btnNavbarSearch" />
         <h1 class="mt-4">BẢNG ĐIỀU KHIỂN</h1>
         <hr>
         <div class="row">
-          <div class="col-xl-4 col-md-6">
+          <div class="col-xl-3 col-md-6">
             <div class="card text-bg-light text-back mb-4">
               <div class="card-body">
                 <i class="fa-solid fa-user"></i>
@@ -101,7 +106,7 @@ aria-describedby="btnNavbarSearch" />
               </div>
             </div>
           </div>
-          <div class="col-xl-4 col-md-6">
+          <div class="col-xl-3 col-md-6">
             <div class="card text-bg-light text-back mb-4">
               <div class="card-body">
                 <i class="fa-solid fa-users"></i>
@@ -112,7 +117,7 @@ aria-describedby="btnNavbarSearch" />
               </div>
             </div>
           </div>
-          <div class="col-xl-4 col-md-6">
+          <div class="col-xl-3 col-md-6">
             <div class="card text-bg-light text-back mb-4">
               <div class="card-body">
                 <i class="fa-solid fa-list"></i>
@@ -123,7 +128,17 @@ aria-describedby="btnNavbarSearch" />
               </div>
             </div>
           </div>
-
+          <div class="col-xl-3 col-md-6">
+            <div class="card text-bg-light text-back mb-4">
+              <div class="card-body" >
+                <i class="fa-solid fa-gears"></i>
+                MY ACCOUNT</div>
+              <div class="card-footer d-flex align-items-center justify-content-between">
+                <a class="small text-back stretched-link" href="../account/myaccount.html">Chi tiết</a>
+                <div class="small text-back"><i class="fas fa-angle-right"></i></div>
+              </div>
+            </div>
+          </div>
     </main>
     <!-- <jsp:include page="../layout/footer.jsp" /> -->
     <footer class="py-4 bg-light mt-auto">
@@ -144,8 +159,8 @@ aria-describedby="btnNavbarSearch" />
 
 <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
         crossorigin="anonymous"></script>
-        <script src="../../../resources/js/scripts.js"></script>
-        <script src="../../../resources/js/datatables-simple-demo.js"></script>
+        <script src="D:\java\case_study_frontend\resources\js\scripts.js"></script>
+        <script src="D:\java\case_study_frontend\resources\js\datatables-simple-demo.js"></script>
 </body>
 
 </html>
