--- a/view/admin/account/account.html
+++ b/view/admin/account/account.html
@@ -9,7 +9,7 @@
     <meta name="description" content="GEAR.VN" />
     <meta name="author" content="GEAR.VN" />
     <title>Dashboard ACCOUNT</title>
-    <link href="/resources/css/admin/styles.css" rel="stylesheet" />
+    <link href="../../../resources/css/admin/styles.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
 
@@ -76,6 +76,10 @@ aria-describedby="btnNavbarSearch" />
             <div class="sb-nav-link-icon"><i class="fa-solid fa-list"></i></div>
             QUẢN LÝ PRODUCT
           </a>
+            <a class="nav-link" href="../orders/orders.html">
+                <div class="sb-nav-link-icon"><i class="fa-solid fa-list"></i></div>
+                DANH SÁCH HÓA ĐƠN
+            </a>
         </div>
       </div>
     </nav>
