--- a/view/admin/layout/sidebar.html
+++ b/view/admin/layout/sidebar.html
@@ -23,6 +23,10 @@
           <div class="sb-nav-link-icon"><i class="fa-solid fa-list"></i></div>
           QUẢN LÝ PRODUCT
         </a>
+        <a class="nav-link" href="?action=bill">
+          <div class="sb-nav-link-icon"><i class="fa-solid fa-list"></i></div>
+          QUẢN LÝ HÓA ĐƠN
+        </a>
       </div>
     </div>
   </nav>
