--- a/view/admin/dashboard/dashboard.html
+++ b/view/admin/dashboard/dashboard.html
@@ -10,7 +10,7 @@
   <meta name="author" content="GEAR.VN" />
   <title>Dashboard ADMIN</title>
   <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
-  <link href="/resources/css/admin/styles.css" rel="stylesheet" />
+  <link href="../../../resources/css/admin/styles.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
@@ -78,6 +78,10 @@ aria-describedby="btnNavbarSearch" />
           <div class="sb-nav-link-icon"><i class="fa-solid fa-list"></i></div>
           QUẢN LÝ PRODUCT
         </a>
+        <a class="nav-link" href="../orders/orders.html">
+          <div class="sb-nav-link-icon"><i class="fa-solid fa-list"></i></div>
+          DANH SÁCH HÓA ĐƠN
+        </a>
       </div>
     </div>
   </nav>
@@ -122,7 +126,20 @@ aria-describedby="btnNavbarSearch" />
               </div>
             </div>
           </div>
+          <div class="col-xl-4 col-md-6">
+            <div class="card text-bg-light text-back mb-4">
+              <div class="card-body">
+                <i class="fa-solid fa-list"></i>
+                DANH SÁCH HÓA ĐƠN</div>
+              <div class="card-footer d-flex align-items-center justify-content-between">
+                <a class="small text-back stretched-link" href="../orders/orders.html">Chi tiết</a>
+                <div class="small text-back"><i class="fas fa-angle-right"></i></div>
+              </div>
+            </div>
+          </div>
 
+        </div>
+      </div>
     </main>
     <!-- <jsp:include page="../layout/footer.jsp" /> -->
     <footer class="py-4 bg-light mt-auto">
