--- a/view/admin/user/show.html
+++ b/view/admin/user/show.html
@@ -75,6 +75,10 @@ aria-describedby="btnNavbarSearch" />
           <div class="sb-nav-link-icon"><i class="fa-solid fa-list"></i></div>
           QUẢN LÝ PRODUCT
         </a>
+        <a class="nav-link" href="../orders/orders.html">
+          <div class="sb-nav-link-icon"><i class="fa-solid fa-list"></i></div>
+          DANH SÁCH HÓA ĐƠN
+        </a>
       </div>
     </div>
   </nav>
